--- a/frontend/Sunshine/styles/Navbar.css
+++ b/frontend/Sunshine/styles/Navbar.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css');
 
 * {
   font-family: 'Montserrat', sans-serif;
