--- a/frontend/Sunshine/styles/Navbar.css
+++ b/frontend/Sunshine/styles/Navbar.css
@@ -170,6 +170,21 @@
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(255, 107, 53, 1)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
 
+.appointment-btn.donate-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  width: 133px;
+  height: 50px;
+  padding: 0.1rem;
+}
+
+.appointment-btn.donate-btn svg {
+  font-size: 18px;
+  color: white;
+}
+
 /* Mobile menu styles */
 @media (max-width: 991px) {
   .navbar-collapse {
@@ -186,5 +201,3 @@
     padding: 0.75rem;
   }
 }
-
-
