--- a/frontend/Sunshine/src/User/Team/MyTeam.css
+++ b/frontend/Sunshine/src/User/Team/MyTeam.css
@@ -53,7 +53,7 @@ min-height: 400px;
 .founder-image {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   object-position: center top;
   display: block;
 }
@@ -166,7 +166,7 @@ width: 100%;    /* Added */
 .member-image {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
   object-position: center top;
   display: block;
   transition: 0.5s;
