--- a/frontend/Sunshine/src/User/Team/MyTeam.css
+++ b/frontend/Sunshine/src/User/Team/MyTeam.css
@@ -53,7 +53,7 @@ min-height: 400px;
 .founder-image {
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  object-fit: cover;
   object-position: center top;
   display: block;
 }
