--- a/frontend/Sunshine/src/User/Team/MyTeam.css
+++ b/frontend/Sunshine/src/User/Team/MyTeam.css
@@ -47,14 +47,14 @@
 .founder-image-container {
   position: relative;
   overflow: hidden;
-  flex: 0 0 450px;      
-min-height: 400px;
+  flex: 0 0 400px;      
+/* min-height: 400px; */
 }
 .founder-image {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  object-position: center top;
+  object-position: center;
   display: block;
 }
 .founder-badge {
