--- a/frontend/Sunshine/src/User/Book_Appoint/Book.css
+++ b/frontend/Sunshine/src/User/Book_Appoint/Book.css
@@ -756,3 +756,15 @@
   left: 0;
   width: 100%;
 }
+
+.floating-icon {
+    font-size: 3rem;
+    opacity: 0.15;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.floating-icon i {
+    color: #2a5298;
+}
